# ros-practice

./: .gitmodules
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/astar_path_planner/share/ament_index/resource_index/package_run_dependencies/: astar_path_planner
install/astar_path_planner/share/astar_path_planner/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
install/astar_path_planner/share/astar_path_planner/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  astar_path_plannerConfig.cmake
install/controllers/share/ament_index/resource_index/nav2_core__pluginlib__plugin/: controllers
install/controllers/share/ament_index/resource_index/package_run_dependencies/: controllers
install/controllers/share/controllers/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/coordinate_transform/lib/coordinate_transform/: coordinate_transform_node
install/coordinate_transform/share/coordinate_transform/: local_setup.sh  package.ps1  package.sh
install/localization/lib/localization/: localization_node
install/localization/share/localization/: package.ps1  package.sh
install/mapping/lib/mapping/: mapping_node
install/mapping/share/ament_index/resource_index/rclcpp_components/: mapping
install/mapping/share/mapping/: local_setup.sh  package.bash  package.sh  package.zsh
install/mineral_deposit_tracking/lib/mineral_deposit_tracking/: mineral_deposit_tracker
install/mineral_deposit_tracking/share/ament_index/resource_index/package_run_dependencies/: mineral_deposit_tracking
install/mineral_deposit_tracking/share/mineral_deposit_tracking/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mineral_deposit_tracking/share/mineral_deposit_tracking/cmake/: mineral_deposit_trackingConfig.cmake
install/obstacle_detector/lib/obstacle_detector/: obstacle_detector_node
install/obstacle_detector/share/obstacle_detector/: package.sh
install/peak_finder/lib/peak_finder/: peak_finder_node
install/peak_finder/share/peak_finder/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/peak_finder/share/peak_finder/cmake/: peak_finderConfig.cmake
install/rj_training_bringup/share/rj_training_bringup/: local_setup.sh  package.bash  package.sh  package.zsh
install/test_pkg/lib/test_pkg/: action_client_node  action_server_node  first_node  second_node  test_node  tf_broadcaster_node  tf_listener_node  topics_node
install/test_pkg/share/ament_index/resource_index/package_run_dependencies/: test_pkg
install/test_pkg/share/test_pkg/: local_setup.sh  package.dsv  package.ps1  package.sh
install/test_pkg/share/test_pkg/config/: turtlesim_params.yaml
install/test_pkg/share/test_pkg/launch/: demo.launch.xml
log/: latest_build
test_pkg/: CMakeLists.txt  package.xml
test_pkg/launch/: demo2.launch.py  demo3.launch.py
test_pkg/src/: action_client_node.cpp  action_server_node.cpp  first_component.cpp  first_node.cpp  service_client.cpp  service_server.cpp  test_node.cpp  tf_broadcaster.cpp  tf_listener.cpp  topics_node.cpp
(+2 files in other folders)
